tests/single_instruction_translation_validation/mcsema/register-variants-samereg/lzcntw_r16_r16/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:181:22: error: use of undefined value '@my.ctlz.i32'
  %8 = tail call i32 @my.ctlz.i32(i32 %7, i1 true) #22
                     ^
0.03user 0.03system 0:00.15elapsed 41%CPU (0avgtext+0avgdata 27532maxresident)k
0inputs+16outputs (0major+3277minor)pagefaults 0swaps
